--- a/app/views/static_pages/guidelines.html.erb
+++ b/app/views/static_pages/guidelines.html.erb
@@ -9,7 +9,7 @@
 
 	<h3>The Basics</h3>
 
-	<ul>
+	<ul class="guideline-list">
 		<li>Self learning through the online courses - try to finish it within the set week ( indicated at the bottom of each courses)</li>
 		<li>Once a week mandatory sessions - book a session by Saturday evening each week</li>
 	</ul>
@@ -18,7 +18,7 @@
 
 	<h3>How to get most out of the TECHRISE learning experience</h3>
 
-	<ul>
+	<ul class="guideline-list">
 
 		<li>Ask a lot of questions - forums, slack, individual mentor sessions, office hours</li>
 		<li>Always be curious to learn material outside the curriculum</li>
@@ -29,7 +29,7 @@
 
 	<h3>How to make most out of the mentor sessions</h3>
 
-	<ul>
+	<ul class="guideline-list">
 		<li>Bring your computer</li>
 		<li>When going through lessons, compile a list of questions to ask your mentor</li>
 		<li>Prepare clear questions and learning goals before going to your mentor session - What are your learning objective? What do you want to get out of the mentor sessions?</li>
@@ -39,7 +39,7 @@
 
 	<h3>Standard TECHRISE Coders Protocol</h3>
 
-	<ul>
+	<ul class="guideline-list">
 		<li>Write the mentor log on the day of your mentor sessions</li>
 		<li>Book mentor sessions by Saturday evening</li>
 		<li>If cancelling, inform your mentor two hours in advance. When running late, let your mentor know.  (Late : 30 minutes later than scheduled time) </li>
