add mentor resources to nav

--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -55,6 +55,11 @@
                                 <li><%= link_to 'MENTOR LOGS', student_sessions_path %></li>
                             <% end %>
                             <li><%= link_to 'GUIDELINES', guidelines_path %></li>
+
+                            <% if current_user.mentor %>
+                                <li><%= link_to 'MENTOR RESOURCES', mentor_resources_path %></li>
+                            <% end %>
+
                             <li><%= link_to 'SETTINGS', edit_user_registration_path %></li>    
                             <li><%= link_to 'SIGN OUT', destroy_user_session_path, method: :delete if user_signed_in? %></li>               
                         </ul>                            
