--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -58,6 +58,7 @@
 
                             <% if current_user.mentor %>
                                 <li><%= link_to 'MENTOR RESOURCES', mentor_resources_path %></li>
+                                <li><%= link_to 'STUDENT QUESTION ARCHIVE', student_questions_path %></li>
                             <% end %>
 
                             <li><%= link_to 'SETTINGS', edit_user_registration_path %></li>    
