add mentor post functionality

--- a/app/views/mentor_materials/resources.html.erb
+++ b/app/views/mentor_materials/resources.html.erb
@@ -21,7 +21,7 @@
     <li><%= link_to 'Ruby Web Dev The Other Way', 'http://rwdtow.stdout.in/' %> - this goes into pretty advanced concepts, but if you can grasp all of these concepts, you are well on your way to becoming a really really good developer.</li>
     <li><%= link_to 'Thought Bot Blog', 'https://robots.thoughtbot.com/' %> - ThoughtBot is a top-notch Rails Web Development consultant company that charges $100,000 USD minimum for a project. Their developers write blog posts which can go into quite advanced topics, but reading this blog will surely equip you with more knowledge.</li>
     <li><%= link_to 'Ruby Weekly', 'http://rubyweekly.com/' %> - This is a weekly mail magazine that has a list of interesting and useful articles regarding Ruby/Ruby on Rails</li>
-    <li><%= link_to 'Toptal Interview Questions', 'https://www.toptal.com/ruby-on-rails/top-10-mistakes-that-rails-programmers-make' %> - If you scroll towards the bottom, you'll see a bunch of questions that test whether you <em>really</em> know how Rails works. Going through the questions and testing your knowledge is a good way to realize that you don't know a lot about Rails yet :)</li>
+    <li><%= link_to 'Toptal Interview Questions', 'https://www.toptal.com/ruby-on-rails/' %> - If you scroll towards the bottom, you'll see a bunch of questions that test whether you <em>really</em> know how Rails works. Going through the questions and testing your knowledge is a good way to realize that you don't know a lot about Rails yet :)</li>
   </ul>
 
 
