--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,5 +1,8 @@
-<%= back_to_lesson %>
-
+<% if @question.mentor_post %>
+  
+<% else %>
+  <%= back_to_lesson %>
+<% end %>
 
 <div class="devise_box forum_container">
 
