--- a/app/assets/stylesheets/mentees.scss
+++ b/app/assets/stylesheets/mentees.scss
@@ -1,3 +1,16 @@
+.mentor_post {
+  background: #f7f7f7;
+}
+
+.mentor-star {
+  margin: 10px auto;
+  text-align: center;
+  font-size: 25px;
+  .fa {
+    color: #ec6952;
+  }
+}
+
 .social-links {
   margin-top: 10px;
   font-size: 30px;
