--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -2,11 +2,48 @@
 
 <div class="panel">
   <div class="panel-head">
-    <%= form_tag community_index_path, method: :get, class: 'form-inline' do %>
-        <%= text_field_tag :query, params[:query], placeholder: 'Search for an answer', class: 'form-control' %>
-        <%= submit_tag "Search", name: nil, class: 'btn btn-danger' %>
-    <% end %>
-  </div>
+    <div class="row">
+      <div class="col-xs-12 col-sm-10">
+        <%= form_tag community_index_path, method: :get, class: 'form-inline' do %>
+            <%= text_field_tag :query, params[:query], placeholder: 'Search for an answer', class: 'form-control' %>
+            <%= submit_tag "Search", name: nil, class: 'btn btn-danger' %>
+        <% end %>
+      </div><!-- col-xs-12 col-sm-10 -->
+
+      <div class="col-xs-12 col-sm-2">
+        <% if current_user.mentor %>
+          <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal">
+           Submit Mentor Post
+          </button>
+
+          <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">Mentor Post</h4>
+                </div>
+                <div class="modal-body">
+                  <%= simple_form_for :question, url: questions_path, method: :post, input_html: {class: 'form-horizontal'} do |f| %>
+                    <%= f.input :title, required: true %>
+                    <div data-no-turbolink>
+                      <%= f.cktext_area :content, as: :text, input_html: {rows: 6}, ckeditor: {language: 'us'}, required: true, class: 'ckeditor' %>
+                    </div>
+                    <%= f.input :mentor_post, as: :hidden, input_html: { value: true } %>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <%= f.submit 'Submit Question', class: 'btn btn-primary' %>
+                  </div>
+                <% end %>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div><!-- col-xs-12 col-sm-2 -->
+    </div><!-- row -->
+  </div><!-- panel-head -->
   <div class="panel-body">
 
     <%= will_paginate @questions, renderer: BootstrapPagination::Rails %>
@@ -16,10 +53,19 @@
       <ul class="question_list">
         <% user = User.find(question.user_id) %>
 
-        <li class="question_container">
+        <% if question.mentor_post %>
+          <li class="question_container mentor_post">
+        <% else %>
+          <li class="question_container">
+        <% end %>
           <div class="row">
             <div class="col-xs-12 col-sm-2">
               <%= image_tag user.avatar, class: 'community_prof_pic' %>
+              <% if user.mentor %>
+                <div class="mentor-star">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+              <% end %>
             </div><!-- col-xs-12 col-sm-4 -->
 
             <div class="col-xs-12 col-sm-8">
@@ -29,8 +75,12 @@
               </div><!-- question_container_information -->
 
               <div class="question_tags">
-                <a href="/<%= question.course_name.underscore %>s"><label class="tag_label"><%= question.course_name.split(/(?=[A-Z])/).join(" ").chomp("Lesson").upcase %></label></a>
-                <a href="/<%= question.course_name.underscore %>s/<%= question.lesson_id %>"><label class="tag_label"><%= Tags::LESSONS[question.course_name.underscore + "s"].keys[question.lesson_id.to_i - 1][1] %></label></a>
+                <% if question.mentor_post %>
+                  <label class="tag_label">MENTOR POST</label>
+                <% else %>
+                  <a href="/<%= question.course_name.underscore %>s"><label class="tag_label"><%= question.course_name.split(/(?=[A-Z])/).join(" ").chomp("Lesson").upcase %></label></a>
+                  <a href="/<%= question.course_name.underscore %>s/<%= question.lesson_id %>"><label class="tag_label"><%= Tags::LESSONS[question.course_name.underscore + "s"].keys[question.lesson_id.to_i - 1][1] %></label></a>
+                <% end %>
               </div><!-- question_tags -->
             </div><!-- col-xs-12 col-sm-2 -->
 
