new landing page edits

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -328,7 +328,15 @@ p {
 //   letter-spacing: 3px;
 // }
 
+.details {
+  margin: 60px 0px;
+}
+
 section {
+  margin: 60px 0px;
+}
+
+.testimonials-section {
   margin: 60px 0px;
 }
 
