--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,9 +19,8 @@
                         <h3 class="title">Curriculum</h3>
                         <ul class="list-unstyled">
                             <li><a href="/learn"><i class="fa fa-caret-right"></i>Learn More</a></li>
-                            <li><a href="/preregistration"><i class="fa fa-caret-right"></i>Sign Up For Pre-registration</a></li>
-<!--                             <li><a href="#"><i class="fa fa-caret-right"></i>Download Apps</a></li>
-                            <li><a href="#"><i class="fa fa-caret-right"></i>Pricing</a></li> -->
+                            <li><a href="/pricing"><i class="fa fa-caret-right"></i>Pricing</a></li>
+                            <li><a href="/users/sign_up"><i class="fa fa-caret-right"></i>Sign Up for Admission</a></li>
                         </ul>
                     </div><!--//footer-col-inner-->
                 </div><!--//foooter-col-->              
@@ -29,8 +28,6 @@
                     <div class="footer-col-inner">
                         <h3 class="title">Support</h3>
                         <ul class="list-unstyled">
-<!--                             <li><a href="#"><i class="fa fa-caret-right"></i>Help</a></li>
-                            <li><a href="#"><i class="fa fa-caret-right"></i>Documentation</a></li> -->
                             <li><a href="#"><i class="fa fa-caret-right"></i>Terms of services</a></li>
                             <li><a href="#"><i class="fa fa-caret-right"></i>Privacy</a></li>
                         </ul>
@@ -47,7 +44,7 @@
                                 <span class="country-name">Japan</span>
                             </span>
                         </p>
-                        <p class="tel"><i class="fa fa-phone"></i>9808378374</p>
+                        <p class="tel"><i class="fa fa-phone"></i> 9808378374</p>
                         <p class="email"><i class="fa fa-envelope-o"></i><a href="#"> natsuko@techrise.me</a></p> 
                         <ul class="social list-inline">
                             <!-- <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li> -->
