--- a/app/views/static_pages/learn.html.erb
+++ b/app/views/static_pages/learn.html.erb
@@ -92,7 +92,7 @@
 
                             <ul class="list-unstyled">
                                 <li><i class="fa fa-star"></i>Weekly 30 minute Mentor Sessions</li>
-                                <li><i class="fa fa-star"></i>Total of 12 Mentor Sessions</li>
+                                <li><i class="fa fa-star"></i>Total of 8 Mentor Sessions</li>
                                 <li><i class="fa fa-star"></i>Tackle problems together</li>
                             </ul>
 
@@ -163,7 +163,7 @@
              </div><!--//step-->
              <div class="step text-center col-md-4 col-sm-4 col-xs-12">
                  <h3 class="title"><span class="number">2</span><br /><span class="text">Complete Prework</span></h3>
-                 <p>If you are chosen as a potential student, you will go through a series of interviews. After that process, you will be sent assignments that you must complete in order to enroll in TECHRISE.</p>
+                 <p>Once you sign up, you will have 2 weeks to complete a series of assignments. You will learn the basics of HTML and CSS. If you complete all of these assignments in 2 weeks, you will be called in for an admission interview.</p>
              </div><!--//step-->
              <div class="step text-center col-md-4 col-sm-4 col-xs-12">
                  <h3 class="title"><span class="number">3</span><br /><span class="text">Start Your Coding Career</span></h3>
