--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -76,6 +76,10 @@
                     </li>
 
                     <li class="nav-item page-scroll">
+                      <a href="/pricing">Pricing</a>
+                    </li>
+
+                    <li class="nav-item page-scroll">
                       <a href="/contact_us">Contact Us</a>
                     </li>
 
