--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -29,10 +29,15 @@
                     </blockquote>
                 </div>       
             </div><!--//about-->
+        </div><!--//story-container-inner --> 
+    </div><!-- story-container -->
+
+    <div class="container-fluid">
+        <div class="meet-team">
             <div class="team row">
                 <h3 class="title">Meet the team</h3>
                 
-                <div class="member col-md-offset-2 col-md-4 col-sm-6 col-xs-12">
+                <div class="member col-md-3 col-xs-12">
                     <div class="member-inner">
                         <figure class="profile">
                             <%= image_tag 'take.jpg', class: 'img-responsive', alt: 'Techrise Nepal Takehiro Mouri' %>
@@ -41,13 +46,15 @@
                         <div class="social">
                             <ul class="social-list list-inline">
                                 <li><a href="https://www.linkedin.com/in/takehiro-mouri-a3083487"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="https://www.facebook.com/take.mouri"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="https://twitter.com/TakehiroMouri"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="http://www.takehiromouri.com/"><i class="fa fa-globe" style="color:white"></i></a></li>                                
                             </ul><!--//social-list-->
                         </div><!--//social-->
                     </div><!--//member-inner-->
                 </div><!--//member-->
 
-                <div class="member col-md-4 col-sm-6 col-xs-12">
+                <div class="member col-md-3 col-xs-12">
                     <div class="member-inner">
                         <figure class="profile">
                             <%= image_tag 'natsuko.jpg', class: 'img-responsive', alt: 'Techrise Nepal Natsuko Robyn Shinozaki', style: 'height: 230px;' %>
@@ -61,7 +68,49 @@
                         <div class="social">
                             <ul class="social-list list-inline">
                                 <li><a href="https://www.linkedin.com/in/robyn-natsuko-shinozaki-12883487"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="https://www.facebook.com/natsuko.r.shinozaki"><i class="fa fa-facebook"></i></a></li>
+                            </ul><!--//social-list-->
+                        </div><!--//social-->
+                    </div><!--//member-inner-->
+                </div><!--//member-->
+
+                <div class="member col-md-3 col-xs-12">
+                    <div class="member-inner">
+                        <figure class="profile">
+                            <%= image_tag 'aadesh.jpg', class: 'img-responsive', alt: 'Techrise Nepal Natsuko Robyn Shinozaki', style: 'height: 230px;' %>
+                            <figcaption class="info">
+                                <span class="name">Aadesh Shrestha</span>
+                                <br />
+                                <span class="job-title">Web Developer/Mentor</span>
+                                
+                            </figcaption>
+                        </figure><!--//profile-->
+                        <div class="social">
+                            <ul class="social-list list-inline">
+                                <li><a href="https://www.linkedin.com/in/aadesh-shrestha-3366b159"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="https://www.facebook.com/aadeshere1"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://twitter.com/aadeshere1"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="http://aadeshere1.github.io/"><i class="fa fa-globe" style="color:white"></i></a></li> 
+                            </ul><!--//social-list-->
+                        </div><!--//social-->
+                    </div><!--//member-inner-->
+                </div><!--//member-->
+
+                <div class="member col-md-3 col-xs-12">
+                    <div class="member-inner">
+                        <figure class="profile">
+                            <%= image_tag 'lakshman.jpg', class: 'img-responsive', alt: 'Techrise Nepal Natsuko Robyn Shinozaki', style: 'height: 230px;' %>
+                            <figcaption class="info">
+                                <span class="name">Lakshman Basnet</span>
+                                <br />
+                                <span class="job-title">Marketing/Business Operations</span>
+                                
+                            </figcaption>
+                        </figure><!--//profile-->
+                        <div class="social">
+                            <ul class="social-list list-inline">
+                                <li><a href="https://www.linkedin.com/in/robyn-natsuko-shinozaki-12883487"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="https://lakshman.me/"><i class="fa fa-globe" style="color:white"></i></a></li>
                             </ul><!--//social-list-->
                         </div><!--//social-->
                     </div><!--//member-inner-->
@@ -75,7 +124,7 @@
                 
                 <h3>Takehiro Mouri</h3>
                 <p>
-                    Takehiro is passionate about teaching and learning. Alongside his work at TECHRISE, he works as the lead engineer at äLuxuRē, a startup located in North Carolina. Takehiro also has experience working as a software engineer for other startups as well. Graduate of The Firehose Project, a 15 week intensive web development training course, which inspired him and Natsuko to start TECHRISE. Multiple category winner at HackNC, one of the largest student based hackathons in the US, awarded the “Best Use of IBM Bluemix Technology Award”, “Best Use of Interactive Intelligence Award”, and “Most Startup Worthy Award”. Has won 1st place in multiple top-level presentation/speech contests in Japan, including receiving 1st prize in the Hong Kong Cup All Japan University Student Ambassadors English Program 2014-2015 and 1st prize in the 40th All Japan Youth English Oratorical Contest for the Mayor of Honolulu. Speaker at TEDxTokyoTeachers. Experience working as a freelancer, providing localization services to more than 10 major Japanese corporations and organizations. Main projects include the Mitsubishi Corporation Relations Committee 50th Anniversary Commemorative and the Shizuoka City Tourism Website.
+                    Takehiro is passionate about teaching and learning. Alongside his work at TECHRISE, he works as the lead engineer at äLuxuRē, a startup located in North Carolina, as well as a freelance software engineer. Takehiro also has experience working as a software engineer for other startups as well. Graduate of The Firehose Project, a 15 week intensive web development training course, which inspired him and Natsuko to start TECHRISE. Multiple category winner at HackNC, one of the largest student based hackathons in the US, awarded the “Best Use of IBM Bluemix Technology Award”, “Best Use of Interactive Intelligence Award”, and “Most Startup Worthy Award”. Has won 1st place in multiple top-level presentation/speech contests in Japan, including receiving 1st prize in the Hong Kong Cup All Japan University Student Ambassadors English Program 2014-2015 and 1st prize in the 40th All Japan Youth English Oratorical Contest for the Mayor of Honolulu. Speaker at TEDxTokyoTeachers. Experience working as a freelancer, providing localization services to more than 10 major Japanese corporations and organizations. Main projects include the Mitsubishi Corporation Relations Committee 50th Anniversary Commemorative and the Shizuoka City Tourism Website.
                 </p>
 
                 <h3>Natsuko Robyn Shinozaki</h3>
@@ -83,9 +132,9 @@
                     Born in Singapore and raised in Japan, Natsuko always had an interest in how businesses or organizations could drive social impact and change. Her most recent activities include working as a digital marketing intern at The Beeck Center for Social Impact and Innovation and as a Junior Consultant for Innovo (a student run consulting group for NGOs and Social Enterprises), both located in Washington D.C. She also has had various on-ground experiences in non-profits and social enterprises in Nepal, the Philippines, Singapore and Japan. Prior to the massive earthquake that hit Nepal in April 2015, Natsuko worked with a local NGO that focuses on increasing child literacy. After the earthquake, she continued to stay on for a couple of months, joining forces with both local and international organizations to help with the relief and rebuilding efforts. Also has experience working as a freelance English/Japanese translator. Works include the official Shizuoka City Tourism Website, an official report for a widely known global non-profit, and a Kindle version autobiography of a well-known social entrepreneur in Japan.
                 </p>
                 
-            </diV>
-            
-        </div><!--//story-container--> 
+            </diV><!-- meet-team -->
+        </div><!-- container-fluid --> 
+        
     </div><!--//container-->
 </section><!--//story-video-->
 
