--- a/app/views/html_css_lessons/lessons/lesson_2.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_2.html.erb
@@ -18,8 +18,8 @@
 
 <h2>Directions</h2>
 <ul>
-  <li><strong>Don't worry about finishing Project 5</strong></li>
-  <li>Finish Project 1 ~ 4</li>
+  <li><strong>Don't worry about finishing Project 3, 4, and 5</strong></li>
+  <li>Finish <strong>Project 1 ~ 2</strong></li>
   <li>Upload screenshot of your completed Dash Assembly screen in the <%= link_to 'submission page.', new_submission_path(course_name: controller_name.classify, lesson_id: params[:id]) %></li>
   <li>There is no need to submit the code for each of the projects, your code should be good to go if you passed all of the Dash lessons :)</li>
   <li>Go to next lesson while you wait for our feedback :)</li>
