--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -1,10 +1,7 @@
-<h1>Errors#internal_server_error</h1>
-<p>Find me in app/views/errors/internal_server_error.html.erb</p>
-
 <div class="col-xs-12 col-md-12">
   <div class="panel">
     <div class="panel-body">
-      Hello
+      Woops! It looks like you reached a bad page :(
     </div>
   </div>
 </div>
