--- a/app/views/application/show.html.erb
+++ b/app/views/application/show.html.erb
@@ -21,7 +21,7 @@
 
       <%= render partial: '/cards/widget' %>
 
-      <%= render :file => "app/views/#{@course_link}/lessons/lesson_#{@lesson}" %>
+      <%= render file: "app/views/#{@course_link}/lessons/lesson_#{@lesson}" %>
       <br class = "clear">
 
       <%= render 'lesson_nav_section' %>
