--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,8 +7,13 @@
       <%= devise_error_messages! %>
 
       <div class="field">
-        <%= f.label :name %><br />
-        <%= f.text_field :name, autofocus: true, required: true, class: 'form-control' %>
+        <%= f.label :first_name %><br />
+        <%= f.text_field :first_name, autofocus: true, required: true, class: 'form-control', placeholder: 'First Name' %>
+      </div>
+
+      <div class="field">
+        <%= f.label :last_name %><br />
+        <%= f.text_field :last_name, autofocus: true, required: true, class: 'form-control', placeholder: 'First Name' %>
       </div>
 
       <div class="field">
