--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -1,12 +1,14 @@
-<div class="col-xs-12 col-md-12">
-  <div class="panel">
-    <div class="panel-body">
-      <center>
-        <b><h1>404 error</h1></b>
-        <%= image_tag 'oops.png' %>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="panel">
+      <div class="panel-body">
+        <center>
+          <b><h1>404 error</h1></b>
+          <%= image_tag 'oops.png' %>
 
-        <h3>Sorry, the page you were looking for doesn't exist :( </h3>
-      </center>
+          <h3>Sorry, the page you were looking for doesn't exist :( </h3>
+        </center>
+      </div>
     </div>
   </div>
 </div>
