add flash message

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -10,7 +10,9 @@
 
 <section class="promo section section-on-bg">
 
-    <div class="container text-center">                
+    <div class="container text-center">       
+        <%= render "shared/flash_messages" %>
+
         <h1 class="title">Coding Bootcamp in Nepal<br/>Become a web developer in 2 months</h2>
         <p class="intro">
           We are currently accepting applications for highly motivated students to join TECHRISE.
