update landing page

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -492,6 +492,7 @@ select {
   max-width: 600px;
   margin: 0 auto;
   margin-bottom: 30px;
+  font-weight: 500;
 }
 .promo .btn-cta {
   font-size: 18px;
