--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -13,11 +13,11 @@
     <div class="container text-center">       
         <%= render "shared/flash_messages" %>
 
-        <h1 class="title">Coding Bootcamp in Nepal<br/>Become a web developer in 2 months</h2>
+        <h1 class="title">Become a Web Developer in 2 Months<br>Experience The New Way of Learning</h2>
         <p class="intro">
-          We are currently accepting applications for highly motivated students to join TECHRISE.
+          An innovative Learning Platform combining 1-on-1 mentor training, project-based learning, and a friendly student community that will accelerate your path to becoming a web developer.
         </p>
-        <p><a class="btn btn-cta btn-cta-primary" href="/users/sign_up">Sign Up for Admission</a></p>
+        <p><a class="btn btn-cta btn-cta-primary" href="/users/sign_up">SIGN UP FOR PRE-WORK</a></p>
     </div><!--//container-->
 </section><!--//promo-->
 
