--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,14 +1,14 @@
 <div class = "row">
   <div class = "col-xs-12 col-sm-10 col-sm-offset-1">
-    <h3 class="text-center" style="font-size: 30px;">Sign up for Admission</h3>
+    <h3 class="text-center" style="font-size: 30px;">Apply to TECHRISE</h3>
 
     <p>
-      After you sign up, you will have 2 weeks to complete a series of pre-work assignments. At TECHRISE, we only accept highly motivated individuals who are eager to increase their skills and keep pushing themselves. The pre-work assignments are designed to test whether or not the applicant is motivated enough to succeed at TECHRISE.
+      After you sign up, you will have <strong>2 weeks</strong> to complete a series of pre-work assignments. At TECHRISE, <strong>we only accept highly motivated individuals who are eager to increase their skills and keep pushing themselves</strong>. The pre-work assignments are designed to test whether or not the applicant is motivated enough to succeed at TECHRISE.
     </p>
 
     <p>
-      Upon completion of the pre-work assignments, we will reach out to you for an interview for admission into TECHRISE. Once you are admitted, you will be paired with a TECHRISE mentor and the course materials will be released.
-    </p>  
+      Upon completion of the pre-work assignments, we will reach out to you for an interview for admission into TECHRISE. Once you are admitted, <strong>you will start on a 2 month journey where you will build projects, have 1 on 1 mentor training, and meet like-minded individuals who love to code.</strong>
+    </p>
 
     <hr>
 
