--- a/app/views/static_pages/_cta_content.html.erb
+++ b/app/views/static_pages/_cta_content.html.erb
@@ -1,4 +1,5 @@
 <h2 class="title">Ready to start coding with TECHRISE?</h2>
-<p class="intro">We are currently accepting applications for highly motivated students to join TECHRISE in future cohorts.</p>
+<p class="intro">We are an innovative Learning Platform combining 1-on-1 mentor training, project-based learning, and a friendly student community that will accelerate your path to becoming a web developer.
+</p>
 
-<%= link_to 'Apply for Admission into TECHRISE', new_user_registration_path, class: 'btn btn-cta btn-cta-primary' %>
+<%= link_to 'SIGN UP FOR PRE-WORK', new_user_registration_path, class: 'btn btn-cta btn-cta-primary' %>
