--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
     </p>
 
     <p>
-      Upon completion of the pre-work assignments, we will reach out to you for an interview for admission into TECHRISE. Once you are admitted, <strong>you will start on a 2 month journey where you will build projects, have 1 on 1 mentor training, and meet like-minded individuals who love to code.</strong>
+      Upon completion of the pre-work assignments, we will reach out to you for an interview for admission into TECHRISE. Tuition fees will be applied only when you are fully admitted as a TECHRISE student. Once you are admitted, <strong>you will start on a 2 month journey where you will build projects, have 1 on 1 mentor training, and meet like-minded individuals who love to code.</strong>
     </p>
 
     <hr>
