--- a/app/assets/stylesheets/community.scss
+++ b/app/assets/stylesheets/community.scss
@@ -1,3 +1,16 @@
+.reply_count_container {
+  margin-top: 35px;
+}
+
+.vote-count {
+  font-weight: 600;
+  color: #888;
+}
+
+.question_content {
+  margin-top: 15px;
+}
+
 .panel-head {
   background: #f7f7f7;
   height: 80px;
