--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,15 @@
+.upvote-icon {
+  font-size: 35px;
+}
+
+.downvote-icon {
+  font-size: 35px;
+}
+
+.votes-container {
+  font-size: 20px;
+}
+
 .guideline-list {
   font-size: 18px;
   li {
