--- a/app/views/layouts/_meta.html.erb
+++ b/app/views/layouts/_meta.html.erb
@@ -35,7 +35,7 @@
 <% unless @post.nil? %>
   <meta property="og:image" content="<%= asset_path @post.featured_image %>"/>
 <% else %>
-  <meta property="og:image" content="http://www.techrise.me<%= asset_path 'startup2.jpg' %>"/>
+  <meta property="og:image" content="http://www.techrise.me<%= asset_path 'background/bg-header-1.1.jpg' %>"/>
 <% end %>
 
 <meta property="og:description" content="Learn how to code with interactive lessons and personal mentors at TECHRISE. Learn how to create web applications with HTML/CSS, Ruby on Rails, JavaScript, and other essential skills for all aspiring web developers and entrepreneurs."/>
