--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,14 @@
+.btn-question {
+  background: #ddd;
+}
+
+.question-header {
+  color: #333;
+  font-weight: 500;
+  border-left: 0px !important;
+  border-bottom: 0px !important;
+}
+
 .upvote-icon {
   font-size: 35px;
 }
