--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,5 +1,9 @@
+.submission_content {
+  margin-top: 35px;
+}
+
 .btn-question {
-  background: #ddd;
+  background: #fafafa;
 }
 
 .question-header {
@@ -108,13 +112,6 @@
   }
 }
 
-.forum_
- {
-  h3 {
-    border-left: 3px solid #ec6952;
-    padding-left: 10px;
-  }
-}
 
 .modal-body {
   p {
@@ -420,6 +417,10 @@ pre {
 
 .forum_section {
 	margin: 50px 0px;
+  border-top: 1px solid #eee;
+  padding-top: 20px;
+  background: whitesmoke;
+  padding: 20px;
 }
 
 .underlined-header {
