--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -103,7 +103,7 @@
                             <figcaption class="info">
                                 <span class="name">Lakshman Basnet</span>
                                 <br />
-                                <span class="job-title">Marketing/Business Operations</span>
+                                <span class="job-title">Business Development Manager</span>
                                 
                             </figcaption>
                         </figure><!--//profile-->
