--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,7 +1,7 @@
 <% if @question.mentor_post %>
   
 <% else %>
-  <%= back_to_lesson %>
+  <%= question_back_to_lesson %>
 <% end %>
 
 <div class="devise_box forum_container">
