--- a/app/assets/stylesheets/community.scss
+++ b/app/assets/stylesheets/community.scss
@@ -46,6 +46,7 @@
   padding: 25px 0;
   border-bottom: 1px solid #f0f2f4;
   position: relative;
+  background: white;
 }
 
 .question_container_information {
