--- a/app/views/ideator_lessons/lessons/lesson_9.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_9.html.erb
@@ -216,7 +216,7 @@ end
   </code></pre>
 
   <p>
-    Here, it is saying that we have an <code>ideas</code> table, and inside that table, we have a<code>description</code> column which is a <code>string</code>, an <code>author</code> column which is a <code>string</code>, a <code>created_at</code> column which is a <code>datetime</code>, and an <code>updated_at</code> column which is a <code>datetime</code>.
+    Here, it is saying that we have an <code>ideas</code> table, and inside that table, we have a<code>description</code> column which is a <code>text</code> column, an <code>author</code> column which is a <code>string</code>, a <code>created_at</code> column which is a <code>datetime</code>, and an <code>updated_at</code> column which is a <code>datetime</code>.
   </p>
 
   <p>
