--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -26,6 +26,11 @@
       <% end %>
 
       <div class="field">
+        <%= f.label :mobile_number %><br />
+        <%= f.number_field :mobile_number, required: true, class: 'form-control', placeholder: 'Your Mobile Number' %>
+      </div>
+
+      <div class="field">
         <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
         <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
       </div>
@@ -42,22 +47,22 @@
 
       <div class="field">
         <%= f.label :facebook_handle %><br />
-        <%= f.text_field :facebook_handle, autocomplete: "off", class: 'form-control' %>
+        <%= f.text_field :facebook_handle, autocomplete: "off", class: 'form-control', placeholder: 'john.smith' %>
       </div>
 
       <div class="field">
         <%= f.label :twitter_handle %><br />
-        <%= f.text_field :twitter_handle, autocomplete: "off", class: 'form-control' %>
+        <%= f.text_field :twitter_handle, autocomplete: "off", class: 'form-control', placeholder: 'john.smith' %>
       </div>
 
       <div class="field">
         <%= f.label :github_handle %><br />
-        <%= f.text_field :github_handle, autocomplete: "off", class: 'form-control' %>
+        <%= f.text_field :github_handle, autocomplete: "off", class: 'form-control', placeholder: 'john.smith' %>
       </div>
 
       <div class="field">
         <%= f.label :personal_website %><br />
-        <%= f.text_field :personal_website, autocomplete: "off", class: 'form-control' %>
+        <%= f.text_field :personal_website, autocomplete: "off", class: 'form-control', placeholder: 'http://www.johnsmith.com' %>
       </div>
 
       <div class="field">
