--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,7 +27,7 @@
 
       <div class="field">
         <%= f.label :mobile_number %><br />
-        <%= f.number_field :mobile_number, required: true, class: 'form-control', placeholder: 'Your Mobile Number' %>
+        <%= f.number_field :mobile_number, class: 'form-control', placeholder: 'Your Mobile Number' %>
       </div>
 
       <div class="field">
