delete tokaido references

--- a/app/views/ideator_lessons/lessons/lesson_1.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_1.html.erb
@@ -14,10 +14,14 @@
 	</ul>
 </div>
 
+<p class="alert alert-warning">
+	Make sure you already have Rails installed in your system. If you haven't been able to do so yet, reach out to a mentor before proceeding in the course.
+</p>
+
 <p>
 	Let's get started!
 </p>
-
+<!-- 
 <p>
 	<strong>First, download Tokaido <a href = "https://github.com/tokaido/tokaidoapp/releases" target = "_blank">Here</a>.</strong> This will enable you to use Ruby on Rails instantly.
 </p>
@@ -39,6 +43,11 @@
 
 	<%= image_tag 'ideator/tokaido.png', class: 'img-responsive screenshot' %>
 </div>
+ -->
+
+<p>
+	First, let's open up our terminal.
+</p>
 
 <div class="well">
 	<h3>Command Line Crash Course</h3>
@@ -114,7 +123,7 @@ rails new ideator
 	<h3>How to create a new Rails application</h3>
 
 	<p>
-		First, make sure that you have opened your terminal from Tokaido. Then, navigate yourself to the folder where you want to create your Rails application using the <code>cd</code> command. 
+		Navigate yourself to the folder where you want to create your Rails application using the <code>cd</code> command. 
 	</p>
 
 	<p>
@@ -134,7 +143,7 @@ rails new app_name
 </div>
 
 <p>
-	Running the command should create a bunch of files and you shouldn’t get any errors. If you do get an error, make sure that everything is spelled out correctly and that you have opened the terminal from Tokaido.
+	Running the command should create a bunch of files and you shouldn’t get any errors.
 </p>
 
 
@@ -167,10 +176,10 @@ rake db:create:all
 	<p>
 		If you haven't done so, make sure to enter <code>cd ~/desktop/ideator</code> before entering the <code>rake</code> commands.
 	</p>
-
+<!-- 
 	<p>	
 		If that doesn't work, make sure you are running the terminal from Tokaido. If you haven't done so, <strong>open Tokaido and click "Open Terminal"</strong>.
-	</p>
+	</p> -->
 
 </div>
 
