--- a/app/views/ideator_lessons/lessons/lesson_2.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_2.html.erb
@@ -8,7 +8,7 @@
 	First we have to set up our SSH keys. Follow <a href = "https://help.github.com/articles/generating-ssh-keys/" target = "_blank">this guide</a> to do so. <strong>Follow each step in the guide from "Checking for existing SSH keys" to "Testing your SSH connection".</strong>
 </p>
 
-<p>After you've completed everything in that link, <strong>open up a second terminal window from Tokaido</strong>. You should now have 2 terminal windows open. One terminal window should be running the rails server.</p>
+<p>After you've completed everything in that link, <strong>open up a second terminal window</strong>. You should now have 2 terminal windows open. One terminal window should be running the rails server.</p>
 
 <div class="well">
   <h3>Having Two Terminal Windows Open</h3>
