--- a/app/views/instapost_lessons/lessons/lesson_1.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_1.html.erb
@@ -9,7 +9,7 @@
 </p>
 
 <p>
-  First, let's open Tokaido and click Open Terminal.
+  First, let's open our terminal.
 </p>
 
 <p>
@@ -40,7 +40,7 @@ rails new instapost
 
 
 <p>
-  Great, now that we’ve created our new rails app, let’s start up our server. Let’s go into Tokaido and open up another terminal window.
+  Great, now that we’ve created our new rails app, let’s start up our server. Let’s open up another terminal window.
 </p>
 
 <p>
