--- a/app/views/ideator_lessons/lessons/lesson_12.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_12.html.erb
@@ -289,7 +289,7 @@ edit_idea GET    /ideas/:id/edit(.:format) ideas#edit
     <li><strong>The Create Action</strong> - the backend process that creates and saves a new record to the database</li>
     <ul>
       <li>When you create a Facebook post, the create action is triggered. The create action takes care of creating the new post and saving it to the Facebook servers.</li>
-      <li><li>This is a <code>POST</code> request</li></li>
+      <li>This is a <code>POST</code> request</li>
     </ul>
     <li><strong>The Edit Page</strong> - the page where there is typically a form where you can edit the record</li>
     <ul>
@@ -366,7 +366,7 @@ end
 </p>
 
 <p>
-  We can pass in a parameter for <code>.create</code> by adding <code>()</code>s like <code>.create()</code> and then passing in information between them. In rails, it is best practice to also use <strong>strong parameters</strong>, which you don't need to worry about learning too deeply right now. <strong>In short, strong params are basically a security meausure to make sure bad people don't input bad things to do bad things.</strong> If you want to find out more, you can read more <a href="http://edgeguides.rubyonrails.org/action_controller_overview.html#strong-parameters" target ="_blank">here</a>.
+  We can pass in a parameter for <code>.create</code> by adding <code>()</code>s like <code>.create()</code> and then passing in information between them. In rails, it is best practice to also use <strong>strong parameters</strong>, which you don't need to worry about learning too deeply right now. <strong>In short, strong params are basically a security measure to make sure bad people don't input bad things to do bad things.</strong> If you want to find out more, you can read more <a href="http://edgeguides.rubyonrails.org/action_controller_overview.html#strong-parameters" target ="_blank">here</a>.
 </p>
 
 <p>
