--- a/app/views/ideator_lessons/lessons/lesson_16.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_16.html.erb
@@ -63,7 +63,7 @@ end
 </div>
 
 <p>
-  First, if let's go into terminal and type in <code>rake routes</code>.
+  First, let's go into terminal and type in <code>rake routes</code>.
 </p>
 
 <pre><code>
